--- a/login-app/src/Screens/Home.module.css
+++ b/login-app/src/Screens/Home.module.css
@@ -1,3 +1,37 @@
-.Titulo {
-    color: black;
+.fondoHome {
+    display: flex; /* Organiza los elementos en columna */
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
+}
+.Header {
+    height: 15vh;
+    width: 100%;
+    display: flex; /* Ordenar los elementos horizontalmente */
+}
+.contenedorHeader1 {
+    background-color: yellow;
+    width: 65%;
+    height: 100%;
+}
+.contenedorHeader2 {
+    width: 35%;
+    height: 100%;
+}
+
+.contenedorHeader2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* Reduce la imagen para que quepa en el contenedor manteniendo la relación de aspecto. */
+    display: block; /* Elimine el espacio sobrante debajo de la imagen */
+}
+.contenidoHome {
+    height: 70vh;
+    background-color: green;
+    width: 100%;
+}
+.contenidoFooter {
+    height: 15vh;
+    background-color: blue;
+    width: 100%;
 }
