--- a/login-app/src/Screens/Home.module.css
+++ b/login-app/src/Screens/Home.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     min-height: 100vh;
 }
-
+/*Header*/
 .Header {
     display: flex;
     align-items: center;
@@ -13,20 +13,17 @@
     border-bottom: 1px solid #ccc;
     padding: 0 0px;
 }
-
 .headerLeft {
     flex: 0 0 20%; /* flexible al 20%, evita la contracción/crecimiento*/
     display: flex;
     align-items: center;
 }
-
 .headerLeft img {
     width: 100%;
     height: auto;
     max-height: 15vh;
     object-fit: contain;
 }
-
 .headerCenter {
     flex-grow: 1; /* Permitir que headerCenter crezca y ocupe espacio disponible */
     display: flex;
@@ -39,26 +36,19 @@
     font-weight: 800;
     font-style: italic;
 }
-
 .title {
     font-size: 1.8rem;
     font-weight: bold;
 }
-
 .headerRight {
     flex: 0 0 20%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-
+/*Contenido*/
 .contenidoHome {
-    height: 70vh; /* Adjust height to 70% of viewport height */
-    padding: 3rem;
-    background-color: #ffffff;
-}
-.contenidoHomeCursos {
-    height: 70vh; /* Adjust height to 70% of viewport height */
+    height: 70vh;
     padding: 3rem;
     background-color: #ffffff;
 }
@@ -67,7 +57,7 @@
     align-items: center;
     gap: 20px; /* Use gap to add space between items */
 }
-
+/*Footer*/
 .contenidoFooter {
     padding: 1rem;
     background-color: #f0f0f0;
